// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/JiraInstanceSelector should match snapshot 1`] = `
<Fragment>
  <ReactSelectSetting
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "https://something.atlassian.net",
          "value": "https://something.atlassian.net",
        },
        Object {
          "label": "http://localhost:8080",
          "value": "http://localhost:8080",
        },
      ]
    }
    theme={Object {}}
  />
</Fragment>
`;

exports[`components/JiraInstanceSelector should match snapshot when onlyShowConnectedInstances is true 1`] = `
<Fragment>
  <ReactSelectSetting
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "https://something.atlassian.net",
          "value": "https://something.atlassian.net",
        },
      ]
    }
    theme={Object {}}
  />
</Fragment>
`;

exports[`components/JiraInstanceSelector should match snapshot when value is set 1`] = `
<Fragment>
  <ReactSelectSetting
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "https://something.atlassian.net",
          "value": "https://something.atlassian.net",
        },
        Object {
          "label": "http://localhost:8080",
          "value": "http://localhost:8080",
        },
      ]
    }
    theme={Object {}}
    value={
      Object {
        "label": "https://something.atlassian.net",
        "value": "https://something.atlassian.net",
      }
    }
  />
</Fragment>
`;
